[metadata]
name = dodobilib
version = 0.0.1
author = dodobi
author_email = bi.service.account@idodo.cz
description = dodobi python library
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/dodobi/dodobi_library
project_urls =
    repository = https://gitlab.com/dodobi/dodobi_library
classifiers =
    Programming Language :: Python :: 3
    License :: (c) Dodo
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    pandas == 1.4.2
    numpy == 1.21.5
    polars == 0.16.5

[options.extras_require]
ds_function =
    scikit-learn == 1.0.2
special_function =
    spark == 0.2.1

[options.packages.find]
where = src
